k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcms-db
  namespace: fcms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fcms-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fcms-db
    spec:
      containers:
      - image: mysql:9
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: fcms-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: fcms-storage
        persistentVolumeClaim:
          claimName: fcms-pvc
