k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcms-db
  namespace: fcms
spec:
  selector:
    app: fcms-db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
