k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcms-ingress
  namespace: fcms
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fcms-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fcms-frontend
            port:
              number: 80
